2010-05-12  Alan McGovern  <amcgovern@novell.com>

	* ObservableCollection_T.cs: Implement the two unimplemented
	  constructors for ObservableCollection

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ObservableCollection_T.cs: Update to SL4 beta API.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ReadOnlyObservableCollection.cs: Fix compiler warnings.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* ObservableCollection_T.cs: This event should be explicitly
	  implemented and a protected version supplied.

2008-08-11  Chris Toshok  <toshok@ximian.com>

	* ObservableCollection_T.cs: emit the CollectionChanged events.
