@@ -1,3 +1,9 @@
+2010-05-31  Alan McGovern  <amcgovern@novell.com>
+
+	* ObservableCollection_T.cs: Whenever we modify the collection
+	  we need to raise an INPC event for 'Count' and 'Items[]'.
+	  Fixes more of 232.
+
 2010-05-12  Alan McGovern  <amcgovern@novell.com>
 
 	* ObservableCollection_T.cs: Implement the two unimplemented
